Remove extra comma in gtestutils.h

https://bugzilla.gnome.org/show_bug.cgi?id=701474